PID config fixes

--- a/printer-sovol-sv01-pro.cfg
+++ b/printer-sovol-sv01-pro.cfg
@@ -61,9 +61,9 @@ heater_pin: PA2
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC4
 control: pid
-pid_Kp= 71.194
-pid_Ki= 1.541
-pid_Kd= 822.296
+#pid_Kp= 71.194
+#pid_Ki= 1.541
+#pid_Kd= 822.296
 min_temp: 5
 max_temp: 125 # per Sovol Marlin
 
