--- a/tool_head_sovol_planetary_high_flow.cfg
+++ b/tool_head_sovol_planetary_high_flow.cfg
@@ -27,9 +27,9 @@ instantaneous_corner_velocity:10
 max_extrude_only_distance: 101.0
 max_extrude_only_velocity:2000
 max_extrude_only_accel:10000
-pid_Kp:24.522 
-pid_Ki:1.397 
-pid_Kd:107.590
+#pid_Kp=24.522 
+#pid_Ki=1.397 
+#pid_Kd=107.590
 min_temp: 0
 max_temp: 305
 
