--- a/tool_head_sovol_titan.cfg
+++ b/tool_head_sovol_titan.cfg
@@ -13,9 +13,9 @@ heater_pin: PA1
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC5
 control: pid
-pid_Kp: 23.534
-pid_Ki: 1.426
-pid_Kd: 97.076
+#pid_Kp= 23.534
+#pid_Ki= 1.426
+#pid_Kd= 97.076
 min_temp: 5
 max_temp: 250 # The stock Sovol Marlin 2.x has a 260°C limit but that's unsafe for the stock PTFE-lined heat break
 
