--- a/printer-sovol-sv01-pro.cfg
+++ b/printer-sovol-sv01-pro.cfg
@@ -60,7 +60,7 @@ homing_retract_dist: 2.0
 heater_pin: PA2
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC4
-control: pid
+#control= pid
 #pid_Kp= 71.194
 #pid_Ki= 1.541
 #pid_Kd= 822.296
