--- a/tool_head_sovol_planetary_high_flow.cfg
+++ b/tool_head_sovol_planetary_high_flow.cfg
@@ -19,7 +19,6 @@ filament_diameter: 1.750
 heater_pin: PA1
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC5
-control: pid
 pressure_advance:0.02
 pressure_advance_smooth_time:0.035
 max_extrude_cross_section:500
@@ -27,6 +26,7 @@ instantaneous_corner_velocity:10
 max_extrude_only_distance: 101.0
 max_extrude_only_velocity:2000
 max_extrude_only_accel:10000
+#control= pid
 #pid_Kp=24.522 
 #pid_Ki=1.397 
 #pid_Kd=107.590
