--- a/tool_head_sovol_titan.cfg
+++ b/tool_head_sovol_titan.cfg
@@ -12,7 +12,7 @@ filament_diameter: 1.750
 heater_pin: PA1
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC5
-control: pid
+#control= pid
 #pid_Kp= 23.534
 #pid_Ki= 1.426
 #pid_Kd= 97.076
