--- a/sample_printer.cfg
+++ b/sample_printer.cfg
@@ -57,3 +57,38 @@ pid_Kd:107.590
 
 [virtual_sdcard]
 path: ~/printer_data/gcodes
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [bltouch]
+#*# z_offset = 0.570
+#*#
+#*# [heater_bed]
+#*# control = pid
+#*# pid_kp = 69.133
+#*# pid_ki = 1.392
+#*# pid_kd = 858.114
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 19.506
+#*# pid_ki = 1.093
+#*# pid_kd = 87.044
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	-0.262500, -0.127500, -0.060000
+#*# 	-0.260000, -0.132500, -0.030000
+#*# 	-0.310000, -0.170000, -0.080000
+#*# x_count = 3
+#*# y_count = 3
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = lagrange
+#*# tension = 0.2
+#*# min_x = 125.3
+#*# max_x = 164.68
+#*# min_y = 93.34
+#*# max_y = 146.66
