Added MCU temperature sensor and filament runout sensor

--- a/printer-sovol-sv01-pro.cfg
+++ b/printer-sovol-sv01-pro.cfg
@@ -83,6 +83,12 @@ square_corner_velocity: 5.0
 max_z_velocity: 5
 max_z_accel: 100
 
+[temperature_sensor mcu]
+sensor_type: temperature_mcu
+sensor_mcu: mcu
+min_temp: 0
+max_temp: 120
+
 [safe_z_home]
 home_xy_position: 145,120 # Change coordinates to the center of your print bed
 speed: 150
@@ -116,3 +122,16 @@ screw_thread: CW-M4
 
 [output_pin beeper]
 pin: PB13
+
+[filament_switch_sensor runout_sensor]
+pause_on_runout: False
+runout_gcode:
+    # PARK_MACRO
+    M117 Out of Filament
+    M600
+insert_gcode:
+    M117 Resuming
+    # RESUME_MACRO
+event_delay: 3.0
+pause_delay: 0.001
+switch_pin: !PA4
