--- a/sample_printer.cfg
+++ b/sample_printer.cfg
@@ -14,30 +14,41 @@ restart_method: command
 [include ./sv01pro/printer-sovol-sv01-pro.cfg]
 
 ## Tool Head
-# Sovol Titan-style extruder and hot end
-[include ./sv01pro/tool_head_sovol_titan.cfg]
-# Sovol Titan bi-metal heat break modification - increase maximum temperature to 300°C
-#[extruder]
-#max_temp: 300
-
-# Stepper current UART mod
-#[include ./stepper_uart.cfg]
-
 # Sovol Planetary tool head conversion
-#[include ./sv01pro/tool_head_sovol_planetary_high_flow.cfg]
+[include ./sv01pro/tool_head_sovol_planetary_high_flow.cfg]
+
+# Stepper current
+[include ./stepper_uart.cfg]
 
 ## Extruder and hot end modifications
 [extruder]
-nozzle_diameter: 0.4
+nozzle_diameter: 1.0 # Unfortunately this can't be readily changed in G code passed from the slicer, setting it to the biggest nozzle I have at the moment.
+
+# UNSAFE SETTING - DO NOT LEAVE ENABLED IN NORMAL OPERATION
+# min_extrude_temp: 0 # Allow cold extrusion, done with the nozzle removed, for rotation_distance calibration.
+
+[printer]
+# Stock Sovol Marlin has default speed limits at 500, 500, 5, and 25 mm/s for X, Y, Z, and E respectively.
+# Similarly, default acceleration limits are set as 500, 500, 100, and 5000 mm/s² for X, Y, Z, and E respectively.
+# Comment says these can be overridden using G-codes M201 and M203, meaning there are effectively no hard-coded,
+# immutable limits for speeds or accelerations in the factory firmware, so some values below are going to be 
+# somewhat arbitrary.
+
+# SV07 runs 12000 by default, the 25 minute benchy for it 8000
+max_velocity: 350
+max_accel: 4000
+#max_accel_to_decel:5000 # default is max_accel / 2
 
 # Printer calibration
 [extruder]
 rotation_distance: 4.59
 pressure_advance:0.02
 pressure_advance_smooth_time:0.035
-pid_Kp:24.522 
-pid_Ki:1.397 
-pid_Kd:107.590
+
+[temperature_sensor raspberry_pi]
+sensor_type: temperature_host
+min_temp: 10
+max_temp: 100
 
 [bltouch]
 #z_offset: 0.5
@@ -45,13 +56,13 @@ pid_Kd:107.590
 # DGUS touchscreen firmware
 # Requires using the gbkwiatt Klipper fork https://github.com/gbkwiatt/klipper
 # and DWIN_SET firmware from https://github.com/fryc88/klipper-sv06plus-screen
-# [include ./sv01pro/touchscreen-t5uid1.cfg]
-
-# Moonraker
-[pause_resume]
+[include ./sv01pro/touchscreen-t5uid1.cfg]
 
 # Object exclusion
 [exclude_object]
+
+# Moonraker
+[pause_resume]
 
 [display_status]
 
