Remove temperature_sensor mcu

--- a/printer-sovol-sv01-pro.cfg
+++ b/printer-sovol-sv01-pro.cfg
@@ -83,11 +83,12 @@ square_corner_velocity: 5.0
 max_z_velocity: 5
 max_z_accel: 100
 
-[temperature_sensor mcu]
-sensor_type: temperature_mcu
-sensor_mcu: mcu
-min_temp: 0
-max_temp: 120
+# Works, but multiple definition problem with expander and temperature_fan block using the sensor
+#[temperature_sensor mcu]
+#sensor_type: temperature_mcu
+#sensor_mcu: mcu
+#min_temp: 0
+#max_temp: 120
 
 [safe_z_home]
 home_xy_position: 145,120 # Change coordinates to the center of your print bed
