--- a/tool_head_sovol_planetary_high_flow.cfg
+++ b/tool_head_sovol_planetary_high_flow.cfg
@@ -34,37 +34,56 @@ min_temp: 0
 max_temp: 305
 
 # Reusing the CR-Touch instead of the included inductive probe
-# Used https://www.printables.com/fr/model/585254-sovol-sv07-bl-touch-mount but had to add washers
-# Determined the X and Y offsets by sticking a sheet of paper to the print surface, homing, marking the nozzle location
-# then moving the probe to the marked location and comparing the coordinates.
 [bltouch]
 sensor_pin: ^PB1
 control_pin: PB0
-x_offset: 30.5
-y_offset: -22.0
-#z_offset = 0.5
+
+# Using https://www.printables.com/model/489843-sovol-sv06-plus-adjustable-cr-bl-touch-mount-volca
+x_offset: 33.0
+y_offset: -21.0
 speed: 2
 samples: 1
 sample_retract_dist: 8.0
 
 # Taking into account the adjusted probe offsets
 [bed_mesh]
-mesh_min: 18.5,0
-mesh_max: 290,218.0
+mesh_min: 21,1
+mesh_max: 290,219.0
 
 # For SCREWS_TILT_CALCULATE
 [screws_tilt_adjust]
-screw1: 14, 236
 screw1_name: rear left screw
-screw2: 222, 236
+screw1: 6.5, 240
 screw2_name: rear right screw
-screw3: 222, 56
+screw2: 214.5, 240
 screw3_name: front right screw
-screw4: 14, 56
+screw3: 214.5, 60
 screw4_name: front left screw
+screw4: 6.5, 60
 horizontal_move_z: 10.
 speed: 100.
 screw_thread: CW-M4
+
+# Previously used https://www.printables.com/model/585254-sovol-sv07-bl-touch-mount but had to add washers
+# Determined the X and Y offsets by sticking a sheet of paper to the print surface, homing, marking the nozzle location
+# then moving the probe to the marked location and comparing the coordinates.
+#x_offset: 30.5
+#y_offset: -22.0
+#z_offset = 0.5
+#
+#[bed_mesh]
+#mesh_min: 18.5,0
+#mesh_max: 290,218.0
+#
+#[screws_tilt_adjust]
+#screw1: 14, 236
+#screw1_name: rear left screw
+#screw2: 222, 236
+#screw2_name: rear right screw
+#screw3: 222, 56
+#screw3_name: front right screw
+#screw4: 14, 56
+#screw4_name: front left screw
 
 # Ajustment for the Y axis given the rail and new carriage
 [stepper_y]
